--- a/asynchronous-task-consumer-service/build.gradle
+++ b/asynchronous-task-consumer-service/build.gradle
@@ -51,3 +51,6 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR3"
 	}
 }
+springBoot{
+    mainClass = "com.shangpin.asynchronous.task.consumer.AsynchronousTaskConsumerServiceApplication"
+}
