--- a/asynchronous-task-consumer-service/src/main/resources/config/application-qa.yml
+++ b/asynchronous-task-consumer-service/src/main/resources/config/application-qa.yml
@@ -1,113 +1,55 @@
+server.port: 8004
+feign.hystrix.enabled: false
 spring: 
   rabbitmq: 
            host: 192.168.20.175
            port: 5672
-           username: scm-message-service
-           password: scm-message-service
-           virtual-host: /scm-message-service
+           username: ephub-message-service-qa
+           password: ephub-message-service-qa
+           virtual-host: /ephub-message-service-qa
   cloud: 
+        consul: 
+          host: 192.168.20.176
+          port: 8500
+          discovery: 
+            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
         stream: 
               bindings: 
-                        spinnakerPendingProduct: 
-                              destination: spinnaker.pending.product
+                        pendingProductImportTask: 
+                              destination: pending.product.import.task
                               group: one
                               consumer: 
                                        concurrency: 5
                                        maxAttempts: 1
-                        ostorePendingProduct: 
-                              destination: ostore.pending.product
+                        hubProductImportTask: 
+                              destination: hub.product.import.task
                               group: one
                               consumer: 
                                        concurrency: 5
                                        maxAttempts: 1
-                        brunarossoPendingProduct: 
-                              destination: brunarosso.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        stefaniaPendingProduct: 
-                              destination: stefania.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        gebPendingProduct: 
-                              destination: geb.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        coltortiPendingProduct: 
-                              destination: coltorti.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        tonyPendingProduct: 
-                              destination: tony.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        biondioniPendingProduct: 
-                              destination: biondioni.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1                                                                                                                                                                                                                                                                                 
               rabbit: 
                       bindings: 
-                            spinnakerPendingProduct: 
+                            pendingProductImportTask: 
                                   consumer: 
                                        prefix: HA.
                                        autoBindDlq: false
                                        requeueRejected: true
                                        republishToDlq: false
-                            ostorePendingProduct: 
+                            hubProductImportTask: 
                                   consumer: 
                                        prefix: HA.
                                        autoBindDlq: false
                                        requeueRejected: true
                                        republishToDlq: false
-                            brunarossoPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            stefaniaPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            gebPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            coltortiPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            tonyPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            biondioniPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false                                                                                                                                                                                                                                                                          
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
+  ftp:
+       host: 192.168.20.110
+       port: 21
+       userName: dev
+       password: shangpin@123
+       ftpHubPath: hub/
+       ftpPendingPath: pending/
   mail: 
        default-recipient: yan_xiao_bin@126.com
        default-sender: yanxiaobin@shangpin.com
@@ -117,7 +59,7 @@ spring:
        protocol: smtp # Protocol used by the SMTP server.
        username: yanxiaobin@shangpin.com # Login user of the SMTP server.
        password: 123.com # Login password of the SMTP server.
-       test-connection: true # Test that the mail server is available on startup.
+       test-connection: false # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
