--- a/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
+++ b/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
@@ -1,6 +1,8 @@
 spring: 
   cloud: 
        consul: 
+         host: 192.168.20.110
+         port: 8500
          discovery: 
            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
            prefer-ip-address: true
