--- a/ephub-product-business-service/src/main/resources/config/application-dev.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-dev.yml
@@ -8,6 +8,8 @@ spring:
            virtual-host: /scm-message-service
   cloud:
         consul: 
+          host: 192.168.20.110
+          port: 8500
           discovery: 
             instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
             prefer-ip-address: true
