--- a/supplier-product-message-service/src/main/resources/config/application-qa.yml
+++ b/supplier-product-message-service/src/main/resources/config/application-qa.yml
@@ -3,9 +3,9 @@ spring:
   rabbitmq: 
            host: 192.168.20.175
            port: 5672
-           username: scm-message-service
-           password: scm-message-service
-           virtual-host: /scm-message-service
+           username: ephub-message-service-qa
+           password: ephub-message-service-qa
+           virtual-host: /ephub-message-service-qa
   cloud: 
         stream: 
               bindings: 
