--- a/ephub-product-business-service/build.gradle
+++ b/ephub-product-business-service/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 dependencies {
 
-	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.5.4-SNAPSHOT')
+	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.5.5-SNAPSHOT')
 
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
@@ -50,6 +50,7 @@ dependencies {
 	
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('junit:junit:4.12')
 }
 
 dependencyManagement {
