--- a/ephub-product-business-service/src/main/resources/config/application-qa.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-qa.yml
@@ -57,3 +57,10 @@ banner:
        location: classpath:banner/banner.txt # Banner file location.
        image:
              location: classpath:banner/logo.jpg # Banner image file location (jpg/png can also be used).
+shangpin:
+   hub:
+       callAddress:
+             gmsAddProductUrl: http://qa.scmapi.shangpin.com/gms/Product/AddProduct
+             gmsSizeUrl: http://qa.scmapi.shangpin.com/gms/GetProductSize
+             gmsBrandUrl: http://qa.scmapi.shangpin.com/gms/GetBrands
+             gmsCategoryUrl: http://qa.scmapi.shangpin.com/gms/GetCategory
