--- a/Della-purchase/src/main/resources/conf.properties
+++ b/Della-purchase/src/main/resources/conf.properties
@@ -1,19 +1,8 @@
 #
 supplierId=2015112001671
 supplierNo=S0000604
-#localFile=E:/Della.txt
-localFile=/usr/local/apporder/Della/a.txt
-remoteFile=JanOrder.csv
-#host=ftp://92.223.134.2
-host=49.213.13.167
-#path=/MOSU/Orders/Save
-path=/home/apiftp
-#port=21
-port=60021
-#user=mosuftp
-user=apiftp
-#password=inter2015£
-password=api@888
+localFile=/usr/local/apporder/Della/orders/
+
 jobsSchedule=0 0/2 * * * ?
 upLoadSchedule=0 0 14 * * ? 
 upLoadScheduleSecond=0 0 19 * * ?
