--- a/ephub-fdfs-client-service/build.gradle
+++ b/ephub-fdfs-client-service/build.gradle
@@ -29,6 +29,7 @@ repositories {
 
 
 dependencies {
+	//compile('commons-io:commons-io:2.5')
 	compile('com.github.tobato:fastdfs-client:1.25.2-RELEASE')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-aop')
