--- a/ephub-fdfs-client-service/src/main/resources/config/application-dev.yml
+++ b/ephub-fdfs-client-service/src/main/resources/config/application-dev.yml
@@ -1,3 +1,4 @@
+spring.jmx.enabled: false
 feign.hystrix.enabled: false
 spring: 
   cloud: 
@@ -5,12 +6,12 @@ spring:
           host: 192.168.20.110
           port: 8500
           discovery: 
-            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+            #instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
             prefer-ip-address: true
-            ip-address: 192.168.20.110
-            hostname: 192.168.20.110
+            #ip-address: 192.168.20.110
+            #hostname: 192.168.20.110
             port: ${server.port}
-            healthCheckUrl: http://localhost:9094/info 
+            #healthCheckUrl: http://localhost:8007/info 
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
   mail: 
