--- a/picture-product-consumer-service/build.gradle
+++ b/picture-product-consumer-service/build.gradle
@@ -29,7 +29,10 @@ repositories {
 
 
 dependencies {
-	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.7.9-SNAPSHOT')
+	compile('com.shangpin.ephub.common.rpc:ephub-common-rpc-connector:0.8.3-SNAPSHOT')
+	compile('commons-codec:commons-codec:1.10')
+	compile('commons-io:commons-io:2.5')
+	compile('org.apache.commons:commons-lang3:3.5')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-aop')
