--- a/picture-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/picture-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -10,8 +10,8 @@ spring:
         consul: 
           host: 192.168.20.110
           port: 8500
-          discovery: 
-            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+          #discovery: 
+            #instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
         stream: 
               bindings: 
                         supplierPictureProduct: 
