--- a/asynchronous-task-consumer-service/src/main/resources/config/application-qa.yml
+++ b/asynchronous-task-consumer-service/src/main/resources/config/application-qa.yml
@@ -8,10 +8,14 @@ spring:
            virtual-host: /ephub-message-service-qa
   cloud: 
         consul: 
-          host: 192.168.20.176
+          host: localhost
           port: 8500
           discovery: 
-            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+            prefer-agent-address: true
+            prefer-ip-address: true
+            health-check-interval: 10s
+            register: false
+            register-health-check: false
         stream: 
               bindings: 
                         pendingProductImportTask: 
