--- a/pending-product-consumer-service/src/main/resources/config/application-qa.yml
+++ b/pending-product-consumer-service/src/main/resources/config/application-qa.yml
@@ -8,7 +8,7 @@ spring:
            virtual-host: /ephub-message-service-qa
   cloud: 
         consul: 
-          host: 192.168.20.176
+          host: localhost
           port: 8500
           discovery: 
             instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
