--- a/ephub-product-business-service/src/main/resources/config/application-qa.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-qa.yml
@@ -8,15 +8,14 @@ spring:
            virtual-host: /ephub-message-service-qa
   cloud:
         consul: 
-          host: 192.168.20.176
+          host: localhost
           port: 8500
           discovery: 
-            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+            prefer-agent-address: true
             prefer-ip-address: true
-            ip-address: 192.168.20.176
-            hostname: 192.168.20.176
-            port: ${server.port}
-            healthCheckUrl: http://192.168.20.176:8003/info 
+            health-check-interval: 10s
+            register: true
+            register-health-check: true
         stream: 
               bindings: 
                         pendingProductImportTask: 
