--- a/ephub-fdfs-client-service/src/main/resources/config/application-dev.yml
+++ b/ephub-fdfs-client-service/src/main/resources/config/application-dev.yml
@@ -3,7 +3,7 @@ feign.hystrix.enabled: false
 spring: 
   cloud: 
         consul: 
-          host: 192.168.20.110
+          host: localhost
           port: 8500
           discovery: 
             #instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
