--- a/ephub-product-business-service/src/main/resources/config/application-dev.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-dev.yml
@@ -8,15 +8,14 @@ spring:
            virtual-host: /scm-message-service
   cloud:
         consul: 
-          host: 192.168.20.110
+          host: 192.168.20.235
           port: 8500
           discovery: 
-            instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+            prefer-agent-address: true
             prefer-ip-address: true
-            ip-address: 192.168.20.110
-            hostname: 192.168.20.110
-            port: ${server.port}
-            healthCheckUrl: http://localhost:9094/info 
+            health-check-interval: 10s
+            register: true
+            register-health-check: true 
         stream: 
               bindings: 
                         pendingProductImportTask: 
@@ -42,16 +41,6 @@ spring:
        password: shangpin@123
        ftpHubPath: hub/
        ftpPendingPath: pending/
-  mail: 
-       default-recipient: yan_xiao_bin@126.com
-       default-sender: yanxiaobin@shangpin.com
-       default-encoding: UTF-8 # Default MimeMessage encoding.
-       host: smtp.263.net # SMTP server host. For instance `smtp.example.com`
-       port: 25 # SMTP server port.
-       protocol: smtp # Protocol used by the SMTP server.
-       username: yanxiaobin@shangpin.com # Login user of the SMTP server.
-       password: 123.com # Login password of the SMTP server.
-       test-connection: false # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
